--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zohai-ibb.github.io/PF",
+  "homepage": "https://zohai-ibb.github.io/Portfolio2",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +18,10 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
